trunk/Archive2/60/2ff84bdc70c08e/output
+ g++ -std=c++1y -O0 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp:4:9: error: static assertion failed: Attempt to access the non-existent subtype of TypeC.
         static_assert(X != X, "Attempt to access the non-existent subtype of TypeC.");
         ^
+ echo 1
1
